assets/css/blocks.css
/* ... */
/** Form elements */

input[type=text],
select {
	background: var(--wp--preset--color--white);
	border: 1px solid #ABB8C3;
	font-size: var(--wp--preset--font-size--body-text);
	padding: 0 20px;
	height: 51px;
}

.directory-filter select {
	padding-left: 16px;
}

input.search-input {
	background-image: url('../img/search-magnifying-glass.png');
	background-position: left 20px center;
	background-repeat: no-repeat;
	background-size: 24px 24px;
	padding-left: 58px;
}

/** Teasers */
.teaser {
	display: flex;
	gap: 16px;
}

.item-type-list-flex .teaser {
	flex-direction: column;
	height: 100%;
}

.teaser-thumb img {
	max-width: 100%;
}

.item-type-label {
	font-weight: 700;
	margin-bottom: 8px;
	text-transform: uppercase;
}

.teaser.featured-article-teaser {
	flex-direction: column;
}

.research-review-teaser-thumb {
	flex: 0 0 30%;
}

/* Navigation */
body .mobile-nav-header {
	display: none;
}

@media screen and (max-width: 600px) {
	body .mobile-nav-header {
		display: flex;
	}

	.wp-block-navigation__responsive-container.is-menu-open .wp-block-navigation__responsive-container-content {
		align-items: flex-start;
	}

	.wp-block-navigation__responsive-container.is-menu-open .wp-block-navigation__responsive-container-content .wp-block-navigation-item, .wp-block-navigation__responsive-container.is-menu-open .wp-block-navigation__responsive-container-content .wp-block-navigation__container, .wp-block-navigation__responsive-container.is-menu-open .wp-block-navigation__responsive-container-content .wp-block-page-list {
		align-items: flex-start;
		position: relative;
		width: 100%;
	}

	.wp-block-navigation__responsive-container.is-menu-open .wp-block-navigation__responsive-container-content .wp-block-navigation__submenu-icon {
		display: inline-block;
		position: absolute;
		right: 0;
		top: 5px;
	}

	.wp-block-navigation .has-child :where(.wp-block-navigation__submenu-container) {
		display: none;
	}

	.wp-block-navigation .subnav-is-expanded.has-child :where(.wp-block-navigation__submenu-container) {
		display: flex;
	}
}

/* Profiles */
.profile-teaser-avatar {
	background-color: var(--wp--preset--color--light-grey);
	background-repeat: no-repeat;
	background-size: cover;
	border-radius: 50%;
	overflow: hidden;
	height: 196px;
	width: 196px;
}

.profile-teaser-avatar.has-default-avatar {
	background-image: url(../img/default-avatar.png);
	background-size: 48px 48px;
	background-position: center center;
}

.profile-teaser-avatar > img {
	object-fit: cover;
	width: 196px;
}

.profile-teaser .profile-teaser-name h3 {
	margin-bottom: 8px;
}

@media screen and (max-width: 600px) {
	.post-type-archive-ramp_profile .profile-teaser .teaser-content {
		display: flex;
		gap: 24px;
	}

	.post-type-archive-ramp_profile .profile-teaser .profile-teaser-avatar {
		height: 120px;
		width: 120px;
	}

	.post-type-archive-ramp_profile .profile-teaser .profile-teaser-name h3 {
		margin-top: 0;
	}
}

.sortable-multi-select-selected-items {
	margin-top: 10px;
}

.sortable-multi-select-item {
	align-items: center;
	border: 1px solid #222;
	border-radius: 2px;
    background-color: #f5f5f5;
	display: flex;
	gap: 12px;
	margin-bottom: 5px;
	padding: 6px 12px 6px 6px;
	width: 100%;
}

.sortable-multi-select-item-hover {
	background-color: #ddd;
}

.sortable-multi-select-item-handle {
	cursor: grab;
	width: 100%;
}

.profile-selector-clear-selected,
.sortable-multi-select-item-remove {
	background: transparent;
	border: 1px solid transparent;
	border-radius: 2px;
	color: rgba( 256, 0, 0, 1 );
	height: 28px;
	flex: 0 0 28px;
	position: relative;
	width: 28px;
}

.profile-selector-clear-selected:after,
.sortable-multi-select-item-remove:after {
	content: "\00D7";
	font-size: 20px;
	position: absolute;
	top: 0;
	left: 0;
	width: 100%;
}

.profile-selector-clear-selected:hover,
.sortable-multi-select-item-remove:hover {
	border-color: #ccc;
	color: rgba( 256, 0, 0, .7 );
}

.profile-selector-selected {
	align-items: center;
	display: flex;
}

.load-more-button {
	margin-top: 72px;
}

@media screen and (max-width: 600px) {
	margin-top: 48px;
}

.ramp-icon path {
	fill: #222;
}

.is-pressed .ramp-icon path {
	fill: #fff;
}

.sidebar-section {
	border-top: 1px solid var(--wp--preset--color--medium-grey);
	padding: 24px;
}

.sidebar-section:last-child {
	border-bottom: 1px solid var(--wp--preset--color--medium-grey);
}

.editor-styles-wrapper h3.sidebar-section-title,
.sidebar-section-title {
	color: var(--wp--preset--color--ramp-green);
	font-size: var(--wp--preset--font-size--h-6);
	margin-top: 0;
	text-transform: uppercase;
}

/* Collapsible sections */
.sidebar-section-collapsible {
	position: relative;
}

.sidebar-section-collapsible h3.sidebar-section-title {
	padding-right: 32px;
}

.sidebar-section-collapsible.section-closed h3.sidebar-section-title {
	color: var(--wp--preset--color--almost-black);
	margin-bottom: 0;
}

.section-toggle {
	background-color: transparent;
	background-size: 20px 20px;
	border: none;
	cursor: pointer;
	height: 20px;
	position: absolute;
	top: 24px;
	right: 24px;
	width: 20px;
}

.section-open .section-toggle {
	background-image: url(../img/toggle-close.png);
}

.section-closed .section-toggle {
	background-image: url(../img/toggle-open.png);
}

.section-closed .section-content {
	display: none;
}

.citation-info dl dt {
	font-weight: 600;
	display: inline;
}

.citation-info dl dd {
	margin-inline-start: 4px;
	display: inline;
}

/* Select2 overrides */
body.admin-bar .select2-dropdown--below,
body.admin-bar .select2-dropdown--above {
	margin-top: 32px;
}

.select2-container .select2-selection--single {
	border-radius: 0;
	height: 51px;
}

.select2-container--default .select2-selection--single .select2-selection__rendered {
	line-height: 51px;
	padding-left: 20px;
	text-overflow: ellipsis;
}

.select2-container--default .select2-selection--single .select2-selection__arrow {
	height: 50px;
	width: 40px;
}
/* ... */

